refactor(core-api): replace raw JSON parsing with @Valid DTOs and remove redundant try/catch
Replace @RequestBody String + manual JSONObject parsing with typed record DTOs
across User, Role, Permission, and Session controllers. Bean Validation now
returns 400 with field-level errors via existing GlobalExceptionHandler.

Strip redundant try/catch blocks that wrapped service exceptions in generic 500
responses, hiding the proper status codes from BaseException subclasses
(ResourceNotFoundException -> 404, BusinessValidationException -> 400,
DuplicateResourceException -> 409). Replace Optional.isEmpty() + 404 patterns
with .orElseThrow(ResourceNotFoundException) for consistency.

Also fix loginEncrypt to use LoginRequestDTO instead of UserRequestDTO, which
required userId via @NotBlank and would fail validation for login payloads.